tests/paczka1/fuzzy1/20461337.err
Error in line 3: x1pDo S270 91,9
Error in line 11: RpvfTf A438 67,4
Error in line 19: O0X A438 33,8
Error in line 12: x1pDo A438 121,8
Error in line 15: RpvfTf S120 60,3
Error in line 31: S270 S270 78,09
Error in line 29: TEa3y A606 69,0
Error in line 37: TEa3y S120 34,5
